hphp/test/zend/good/Zend/tests/clone_004.php.expectf

Fatal error: Cannot use array access on an object in %s/clone_004.php on line 13
